--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,5 @@
-attrs==23.2.0
-beautifulsoup4==4.12.3
-certifi==2023.11.17
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-gTTS==2.4.0
-h11==0.14.0
-idna==3.6
 msedge-selenium-tools==3.141.4
-outcome==1.3.0.post0
-pycparser==2.21
-PySocks==1.7.1
-requests==2.31.0
-selenium==3.141.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.5
-trio==0.24.0
-trio-websocket==0.11.1
-typing_extensions==4.9.0
-urllib3==2.1.0
-wsproto==1.2.0
+pytest==6.2.5
+pytest-html==3.1.1
+selenium==4.1.0
+beautifulsoup4==4.12.3
